build/log/idf_py_stdout_output_8700
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Client\Desktop\MCPWM\sample_project\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/Client/Desktop/MCPWM/sample_project/build/bootloader/bootloader.bin"
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/8] Building C object esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj
FAILED: esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Client/Desktop/MCPWM/sample_project/build/config -IC:/Users/Client/Desktop/MCPWM/sample_project/components/multscan_shell/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/touch_sensor/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Client/Desktop/MCPWM/sample_project=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj -MF esp-idf\multscan_shell\CMakeFiles\__idf_multscan_shell.dir\multscan_shell.c.obj.d -o esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj -c C:/Users/Client/Desktop/MCPWM/sample_project/components/multscan_shell/multscan_shell.c
C:/Users/Client/Desktop/MCPWM/sample_project/components/multscan_shell/multscan_shell.c: In function 'multscan_envia_msg':
C:/Users/Client/Desktop/MCPWM/sample_project/components/multscan_shell/multscan_shell.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
